# renda-sim

./: .gitignore  CMakeLists.txt  README.md  config.json  renda-sim.code-workspace
.github/workflows/: Unit Tests.yml
Engine/: .clang-tidy  CMakeLists.txt  Makefile  justfile
Engine/include/: EntryPoint.hpp  eventManager.hpp  logger.hpp  model.hpp  modelVariable.hpp  simpleEvent.hpp
Engine/scripts/: coverage.sh  gcovr.cfg  test.sh
Engine/src/: CMakeLists.txt  SourceFiles.cmake  common.hpp  engine.hpp  main.cpp
Engine/src/engine/: main.cpp
Engine/src/engine/logger/: logger.cpp  logger.hpp
Engine/src/engine/messaging/: messageParser.cpp
Engine/src/engine/model/: model.cpp  model.hpp  modelContainer.hpp  modelVariable.hpp
Engine/src/engine/network/server/: server.hpp
Engine/src/eventManager/: event.hpp  eventManager.cpp  eventManager.hpp  simpleEvent.hpp
Engine/src/fileOperations/: fileOperations.cpp
Engine/src/json/: json.cpp
Engine/src/logger/: logger.cpp  logger.hpp
Engine/src/messaging/: commandParser.cpp  commandParser.hpp  commanding.cpp  commanding.hpp  messageParser.cpp  messaging.cpp  messaging.hpp  publisher.cpp  publisher.hpp
Engine/src/model/: model.cpp  model.hpp  modelContainer.cpp  modelContainer.hpp  modelVariable.hpp  object.hpp  variableProperties.hpp
Engine/src/models/: root.cpp  root.hpp
Engine/src/models/common/: fallible.hpp
Engine/src/models/common/load/: load.cpp  loadContainer.hpp  loadState.cpp
Engine/src/models/sampleModel/: sampleModel.cpp  sampleModel.hpp
Engine/src/network/server/: server.cpp
Engine/src/scheduler/: Entrypoint.hpp  boost_scheduler.hpp  scheduler.cpp  scheduler.hpp
Engine/src/timer/: timer.cpp
Engine/test/: CMakeLists.txt  TestFiles.cmake  eventManagerTest.cpp  fileOperationsTest.cpp  schedulerTest.cpp
Engine/tests/: CMakeLists.txt  TestFiles.cmake  eventManagerTest.cpp  fileOperationsTest.cpp  jsonTest.cpp  schedulerTest.cpp
Models/: CMakeLists.txt  Makefile  justfile
Models/scripts/: clean.sh  coverage.sh  gcovr.cfg  run.sh  test.sh
Models/src/: CMakeLists.txt  SourceFiles.cmake  main.cpp  root.hpp
Models/src/common/: dataFlow.hpp  fallible.hpp
Models/src/common/load/: load.cpp  load.hpp  loadContainer.hpp  loadState.cpp  loadState.hpp
Models/src/payload/: dataInterface.hpp  payload.cpp  payload.hpp
Models/src/pcs/: pcs.cpp  pcs.hpp
Models/src/sampleModel/: sampleModel.cpp  sampleModel.hpp
Models/test/: CMakeLists.txt  TestFiles.cmake  benchmark.hpp
Models/tests/: CMakeLists.txt  TestFiles.cmake  testLoadConfig.json
Python_GUI/: commanding.py  main.py  messaging.py
Python_GUI/engine_controls/: window.py
Python_GUI/main_window/: bind.py  handlers.py  window.py
Python_GUI/plot/: plot.py  plot2.py
Python_GUI/scale_setter/: bind.py  handlers.py  window.py
Python_GUI/time_setter/: bind.py  handlers.py  window.py
scripts/: build.sh  clean.sh  gcovr.cfg  run.sh  test.sh
src/: CMakeLists.txt  SourceFiles.cmake  main.cpp
src/common/: failure.hpp  fallible.hpp  model.hpp  modelItem.hpp  modelVariable.hpp  object.hpp  variableProperties.hpp
src/common/load/: load.cpp  loadState.cpp
src/engine/eventManager/: eventManager.cpp
src/engine/fileOperations/: fileOperations.cpp
src/engine/json/: json.cpp
src/engine/logger/: logger.cpp  logger.hpp
src/engine/messaging/: messageParser.cpp  messageParser.hpp  messaging.cpp
src/engine/model/: model.cpp  modelContainer.cpp
src/engine/scheduler/: scheduler.hpp
src/engine/timer/: timer.cpp
src/models/common/load/: load.cpp  load.hpp
src/models/pcs/: pcs.cpp  pcs.hpp
src/models/sampleModel/: sampleModel.cpp  sampleModel.hpp
src/pcs/: pcs.hpp
src/sampleModel/: sampleModel.cpp  sampleModel.hpp
src/services/: dataFlow.hpp  fileOperations.hpp  messageParser.cpp  messageParser.hpp  messaging.cpp  messaging.hpp  modelContainer.hpp  modelEvent.hpp  serviceContainer.hpp
src/services/eventManager/: eventManager.cpp  eventManager.hpp  simpleEvent.hpp
src/services/fileOperations/: fileOperations.cpp  fileOperations.hpp
src/services/json/: json.cpp  json.hpp
src/services/logger/: logger.cpp  logger.hpp
src/services/messaging/: messageParser.cpp  messaging.cpp  messaging.hpp
src/services/model/: model.cpp  model.hpp  modelContainer.cpp  modelContainer.hpp  modelVariable.hpp  variableProperties.hpp
src/services/network/client/: client.cpp  client.hpp
src/services/network/server/: server.cpp  server.hpp
src/services/scheduler/: scheduler.cpp  scheduler.hpp
src/services/timer/: timer.cpp  timer.hpp
tests/: CMakeLists.txt  TestFiles.cmake  benchmark.hpp  eventManagerTest.cpp  sampleTest.cpp  testLoadConfig.json
tests/common/: dataFlowTest.cpp  failureTest.cpp  loadTest.cpp
tests/engine/: eventManagerTest.cpp  jsonTest.cpp
tests/services/: dataFlowTest.cpp  eventManagerTest.cpp  fileOperationsTest.cpp  jsonTest.cpp  (+5 more)
ui/: commanding.py  deps.md  main.py  mainWindow.cpp  mainWindow.hpp  messaging.py  plotWindow.cpp  plotWindow.hpp  variableTreeItemsContainer.hpp
(+129 files in other folders)
